<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color1"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/text_view_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/separator"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="60sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/image_view_alarm_on"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_alarm_on" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_snooze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:padding="15dp"
            android:text="@string/snooze"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:padding="15dp"
            android:text="@string/stop"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>